feat(1.16.5): mint the band forking 1.17.1, shipping Fabric and Forge
Fork the 1.16.5 band from the 1.17.1 branch and down-port the 1.16-to-1.17 API delta. The defining reversion is the Java floor dropping from 16 to 8, which removes records, var, sealed types, switch expressions and pattern-matching instanceof from the adapter SPI, the per-band plug, the loader islands and the roughly 200-file test tree alike. Each modern construct takes its Java 8 form: a record becomes a final class with explicit fields and accessors, a switch expression becomes a statement, a pattern instanceof becomes a cast after the check, and the Java 9+ Optional, stream, Files and collection-factory helpers take their Java 8 forms. Logging moves off slf4j, which 1.16.5 does not bundle, onto log4j.

On the save axis the chunk reverts to a fixed 0..256 column with no LevelHeightAccessor, block entities nest under Level.TileEntities, and the entity axis returns to its 1.16.5 in-chunk home: captured entities are folded into the region chunk's Level.Entities rather than written to a separate entities/ region, which is a 1.17 addition, so a downloaded world keeps its mobs, vehicles, villagers and ridden mounts on load. The writer reroutes its entity submit through a region read-modify-write that unions the captured entities into the host chunk through the existing entity merge, dropping the second storage and the entities/ path; a fold with no host chunk is a counted loss, intrinsic to the in-chunk layout. The IOWorker flush reverts to the no-argument synchronize, the map data to the classic MapItemSavedData, and the outline and rim renderer to the pre-1.17 texture-bind and color4f seam. The 1.17 narration API is absent, so the narrated cycle button becomes a band-local WdlCycleButton, and the downloads list, which on the higher bands narrates its selected row through the 1.17 per-entry updateNarration hook, instead narrates through the list's setSelected calling NarratorChatListener the way vani