@@ -7,15 +7,14 @@ import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 import static world.thearchive.wdl.testsupport.BlockEntityFixtures.blockEntity;
 
+import com.google.common.collect.ImmutableList;
 import java.util.LinkedHashMap;
-import java.util.List;
 import java.util.Map;
 import net.minecraft.core.BlockPos;
 import net.minecraft.core.RegistryAccess;
 import net.minecraft.nbt.CompoundTag;
 import net.minecraft.nbt.ListTag;
 import net.minecraft.nbt.StringTag;
-import net.minecraft.nbt.Tag;
 import net.minecraft.network.chat.Component;
 import net.minecraft.network.chat.TextComponent;
 import net.minecraft.world.item.ItemStack;
@@ -70,7 +69,7 @@ class LecternRecaptureSynergyTest {
     }
 
     private static String mergedTitle(CompoundTag chunkTag) {
-        ListTag blockEntities = chunkTag.getCompound("Level").getList("TileEntities", Tag.TAG_COMPOUND);
+        ListTag blockEntities = chunkTag.getCompound("Level").getList("TileEntities", 10);
         CompoundTag lectern = blockEntities.getCompound(0);
         ItemStack back = ItemStack.of(lectern.getCompound("Book"));
         assertTrue(!back.isEmpty(), "the re-captured lectern carries a decodable Book");
@@ -95,7 +94,7 @@ class LecternRecaptureSynergyTest {
     void reCapturingThePlacedLecternLetsTheStashMergeOntoIt() {
         // After re-capture the chunk's block entities include the placed lectern, so the merge lands.
         ChunkSnapshotSource snapshot = SyntheticChunks.fullWithBlockEntities(registries, false,
-                List.of(blockEntity("minecraft:lectern", LECTERN_X, LECTERN_Y, LECTERN_Z)));
+                ImmutableList.of(blockEntity("minecraft:lectern", LECTERN_X, LECTERN_Y, LECTERN_Z)));
         CompoundTag recapturedTag = codec.encode(snapshot, registries, false);
 
         Map<BlockPos, CompoundTag> stash = new LinkedHashMap<>();
@@ -116,7 +115,7 @@ class LecternRecaptureSynergyTest {
         CompoundTag latestRecapture = null;
         for (int reencode = 0; reencode < 3; reencode++) {
             ChunkSnapshotSource snapshot = SyntheticChunks.fullWithBlockEntities(registries, false,
-                    List.of(blockEntity("minecraft:lectern", LECTERN_X, LECTERN_Y, LECTERN_Z)));
+                    ImmutableList.of(blockEntity("minecraft:lectern", LECTERN_X, LECTERN_Y, LECTERN_Z)));
             latestRecapture = codec.encode(snapshot, registries, false);
         }
 
