@@ -8,13 +8,13 @@ import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertNull;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
+import com.google.common.collect.ImmutableSet;
 import it.unimi.dsi.fastutil.longs.Long2IntMap;
 import it.unimi.dsi.fastutil.longs.Long2IntOpenHashMap;
 import it.unimi.dsi.fastutil.longs.Long2ObjectMap;
 import it.unimi.dsi.fastutil.longs.Long2ObjectOpenHashMap;
 import it.unimi.dsi.fastutil.longs.LongOpenHashSet;
 import it.unimi.dsi.fastutil.longs.LongSets;
-import java.util.Set;
 import java.util.UUID;
 import org.junit.jupiter.api.Test;
 
@@ -32,7 +32,8 @@ class CapturedContainersTest {
 
     @Test
     void reportsBlockMembership() {
-        CapturedContainers captured = new CapturedContainers(new LongOpenHashSet(new long[] { 7L, 9L }), Set.of(),
+        CapturedContainers captured = new CapturedContainers(new LongOpenHashSet(new long[] { 7L, 9L }),
+                ImmutableSet.of(),
                 false);
         assertTrue(captured.containsBlock(7L));
         assertTrue(captured.containsBlock(9L));
@@ -41,22 +42,22 @@ class CapturedContainersTest {
 
     @Test
     void reportsEntityMembership() {
-        CapturedContainers captured = new CapturedContainers(LongSets.EMPTY_SET, Set.of(PRESENT), false);
+        CapturedContainers captured = new CapturedContainers(LongSets.EMPTY_SET, ImmutableSet.of(PRESENT), false);
         assertTrue(captured.containsEntity(PRESENT));
         assertFalse(captured.containsEntity(ABSENT));
     }
 
     @Test
     void reportsEnderFlag() {
-        assertTrue(new CapturedContainers(LongSets.EMPTY_SET, Set.of(), true).enderCaptured());
-        assertFalse(new CapturedContainers(LongSets.EMPTY_SET, Set.of(), false).enderCaptured());
+        assertTrue(new CapturedContainers(LongSets.EMPTY_SET, ImmutableSet.of(), true).enderCaptured());
+        assertFalse(new CapturedContainers(LongSets.EMPTY_SET, ImmutableSet.of(), false).enderCaptured());
     }
 
     @Test
     void reportsBookshelfCapturedSlots() {
         Long2IntMap masks = new Long2IntOpenHashMap();
         masks.put(7L, 0b101);
-        CapturedContainers captured = new CapturedContainers(LongSets.EMPTY_SET, Set.of(), false, masks,
+        CapturedContainers captured = new CapturedContainers(LongSets.EMPTY_SET, ImmutableSet.of(), false, masks,
                 new Long2ObjectOpenHashMap<>());
         assertEquals(0b101, captured.bookshelfCapturedSlots(7L));
         assertEquals(0, captured.bookshelfCapturedSlots(8L));
@@ -71,7 +72,8 @@ class CapturedContainersTest {
     void reportsCapturedBlockType() {
         Long2ObjectMap<String> types = new Long2ObjectOpenHashMap<>();
         types.put(7L, "minecraft:barrel");
-        CapturedContainers captured = new CapturedContainers(new LongOpenHashSet(new long[] { 7L }), Set.of(), false,
+        CapturedContainers captured = new CapturedContainers(new LongOpenHashSet(new long[] { 7L }), ImmutableSet.of(),
+                false,
                 new Long2IntOpenHashMap(), types);
         assertEquals("minecraft:barrel", captured.capturedBlockType(7L));
         assertNull(captured.capturedBlockType(8L));
