@@ -7,11 +7,11 @@ import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
+import com.google.common.collect.ImmutableSet;
 import it.unimi.dsi.fastutil.longs.Long2IntMap;
 import it.unimi.dsi.fastutil.longs.Long2IntOpenHashMap;
 import it.unimi.dsi.fastutil.longs.LongOpenHashSet;
 import it.unimi.dsi.fastutil.longs.LongSets;
-import java.util.Set;
 import java.util.UUID;
 import org.junit.jupiter.api.Test;
 
@@ -37,7 +37,7 @@ class RecoveredCoverageTest {
     void reportsBookshelfSavedSlots() {
         Long2IntMap masks = new Long2IntOpenHashMap();
         masks.put(7L, 0b101);
-        RecoveredCoverage recovered = new RecoveredCoverage(LongSets.EMPTY_SET, masks, Set.of(), false);
+        RecoveredCoverage recovered = new RecoveredCoverage(LongSets.EMPTY_SET, masks, ImmutableSet.of(), false);
         assertEquals(0b101, recovered.bookshelfSavedSlots(7L));
         assertEquals(0, recovered.bookshelfSavedSlots(8L));
     }
@@ -53,13 +53,15 @@ class RecoveredCoverageTest {
         assertTrue(RecoveredCoverage.ENDER_ONLY.enderRecovered());
         assertFalse(RecoveredCoverage.ENDER_ONLY.contains(7L), "the ender fact carries no per-position coverage");
         assertTrue(
-                new RecoveredCoverage(LongSets.EMPTY_SET, new Long2IntOpenHashMap(), Set.of(), true).enderRecovered());
+                new RecoveredCoverage(LongSets.EMPTY_SET, new Long2IntOpenHashMap(), ImmutableSet.of(), true)
+                        .enderRecovered());
     }
 
     @Test
     void reportsEntityMembership() {
         UUID cart = new UUID(0xAAAAL, 0xBBBBL);
-        RecoveredCoverage recovered = new RecoveredCoverage(LongSets.EMPTY_SET, new Long2IntOpenHashMap(), Set.of(cart),
+        RecoveredCoverage recovered = new RecoveredCoverage(LongSets.EMPTY_SET, new Long2IntOpenHashMap(),
+                ImmutableSet.of(cart),
                 false);
         assertTrue(recovered.containsEntity(cart));
         assertFalse(recovered.containsEntity(new UUID(0xCCCCL, 0xDDDDL)));
