@@ -3,9 +3,11 @@
 
 package world.thearchive.wdl.fabric.gametest;
 
+import com.google.common.collect.ImmutableList;
 import java.nio.file.Path;
 import java.util.List;
 import java.util.UUID;
+import java.util.stream.Collectors;
 import net.fabricmc.fabric.api.client.gametest.v1.FabricClientGameTest;
 import net.fabricmc.fabric.api.client.gametest.v1.context.ClientGameTestContext;
 import net.fabricmc.fabric.api.client.gametest.v1.context.TestServerContext;
@@ -149,11 +151,11 @@ public class WdlSpectatorContainerCaptureTest implements FabricClientGameTest {
         Path saveRoot = run.stopAndAwaitSave();
         List<String> cartItems = CaptureReadback.readEntityChunk(saveRoot, cartChunk)
                 .map(CaptureReadback::entities)
-                .orElse(List.of()).stream()
+                .orElse(ImmutableList.of()).stream()
                 .filter(entity -> CaptureReadback.entityUuid(entity).filter(cartId::equals).isPresent())
                 .findFirst()
                 .map(CaptureReadback::itemIds)
-                .orElse(List.of());
+                .orElse(ImmutableList.of());
         Check.that(!cartItems.contains("minecraft:diamond"),
                 "a spectator's unattributed open reached disk on the crosshair's vehicle: " + cartItems);
 
@@ -229,7 +231,7 @@ public class WdlSpectatorContainerCaptureTest implements FabricClientGameTest {
         List<String> enderItems = CaptureReadback.levelData(saveRoot).getCompound("Player")
                 .getList("EnderItems", Tag.TAG_COMPOUND).stream().map(t -> (CompoundTag) t)
                 .map(item -> (item.contains("id") ? item.getString("id") : "?"))
-                .toList();
+                .collect(Collectors.toList());
         Check.that(!enderItems.contains("minecraft:diamond"),
                 "the minecart's contents were written into the player's ender inventory: " + enderItems);
     }
